--- a/app/src/main/res/layout/translator.xml
+++ b/app/src/main/res/layout/translator.xml
@@ -57,6 +57,9 @@
                 android:id="@+id/editTextString"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:hint="Введите слово"
+                android:imeOptions="actionDone"
+                android:singleLine="true"
                 android:layout_weight="1"
                 android:gravity="top"/>
 
