--- a/app/src/main/res/layout-land/translator.xml
+++ b/app/src/main/res/layout-land/translator.xml
@@ -41,9 +41,7 @@
             android:textAlignment="center"
             android:background="@color/text_view_color"
             android:id="@+id/spn_language_on"
-            android:spinnerMode="dialog"
-            android:paddingLeft="30dp"
-            android:paddingRight="10dp">
+            android:spinnerMode="dialog">
         </Spinner>
 
     </LinearLayout>
