--- a/app/src/main/res/layout/row_spenner.xml
+++ b/app/src/main/res/layout/row_spenner.xml
@@ -7,6 +7,8 @@
     <TextView
         android:id="@+id/text_row"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="15sp"/>
+        android:layout_height="50dp"
+        android:textSize="17sp"
+        android:padding="10dp"
+        android:gravity="fill_horizontal|fill_vertical" />
 </LinearLayout>
