--- a/app/src/main/res/layout/translator.xml
+++ b/app/src/main/res/layout/translator.xml
@@ -14,12 +14,11 @@
                 android:layout_width="0dp"
                 android:layout_height="70dp"
                 android:layout_weight="1"
-                android:textAlignment="center"
                 android:id="@+id/spn_language_from"
                 android:background="@color/text_view_color"
                 android:spinnerMode="dialog"
-                android:paddingLeft="30dp"
-                android:paddingRight="10dp">
+                android:padding="10dp"
+                android:layout_gravity="bottom">
             </Spinner>
 
 
@@ -38,12 +37,10 @@
                 android:layout_width="0dp"
                 android:layout_height="70dp"
                 android:layout_weight="1"
-                android:textAlignment="center"
                 android:background="@color/text_view_color"
                 android:id="@+id/spn_language_on"
-                android:spinnerMode="dialog"
-                android:paddingLeft="30dp"
-                android:paddingRight="10dp">
+                android:padding="10dp"
+                android:spinnerMode="dialog">
             </Spinner>
 
         </LinearLayout>
@@ -61,13 +58,16 @@
                 android:imeOptions="actionDone"
                 android:singleLine="true"
                 android:layout_weight="1"
-                android:gravity="top"/>
+                android:gravity="top" />
 
             <TextView
                 android:id="@+id/textViewString"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:text="Перевод"
+                android:textSize="20sp"
+                android:padding="10dp"
                 android:background="@color/text_view_color"/>
 
         </LinearLayout>
