--- a/app/src/main/res/layout/translator.xml
+++ b/app/src/main/res/layout/translator.xml
@@ -54,7 +54,7 @@
                 android:id="@+id/editTextString"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="@string/ru_app_name"
+                android:hint="@string/edit_hint"
                 android:imeOptions="actionDone"
                 android:singleLine="true"
                 android:layout_weight="1"
